fixed z-index bug

--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,10 @@ video {
   z-index: 10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
